--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
                 </ul>
             </div>
         </nav>
-        <div id="intro">
-            <h1><span>Hi, my name's</span>Alex Li. I'm a software developer</h1>
-        </div>
-        <div>
-            <p>bladjfakdjflkdsf</p>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    hi
+                </div>
+            </div>
         </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
