--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width" initial-scale=1>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/a5f2b906ce.js" crossorigin="anonymous"></script>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" type="text/css" href="style.css">
         <title>Alex Li | Software Engineer</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-md navbar-dark">
+        <nav id="navbar" class="navbar fixed-top navbar-expand-md navbar-dark">
             <a class="navbar-brand" href="https://www.facebook.com/alex.li.568/" target="_blank">
                 <i class="fab fa-facebook-f"></i>
             </a>
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active ml-auto">
-                        <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">About</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item active ml-auto">
                         <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Experience</a>
@@ -53,10 +53,20 @@
                 </ul>
             </div>
         </nav>
-        <div class="container">
+        <div id="intro" class="container-fluid">
             <div class="row">
                 <div class="col">
-                    hi
+                    <h1><span>Hi, my name is</span><br>Alex Li.<br><span>I'm a</span><br>software engineer<br><span>based in San Francisco.</span></h1>
+                </div>
+            </div>
+        </div>
+        <div id="about" class="container">
+            <div class="row">
+                <div class="col">
+                    <h2>About</h2>
+                    <img src="assets/images/profile.jpg" class="rounded-circle" alt="profile picture">
+                    <p>Hey there! I'm Alex, a software engineer based in San Francisco, CA.<br><br>
+                    I love building things and have several completed projects which you can view below.</p>
                 </div>
             </div>
         </div>
@@ -64,4 +74,5 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
 </html>
