Fix about container

--- a/index.html
+++ b/index.html
@@ -64,9 +64,15 @@
             <div class="row">
                 <div class="col">
                     <h2>About</h2>
-                    <img src="assets/images/profile.jpg" class="rounded-circle" alt="profile picture">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-6">
+                    <img src="assets/images/profile.jpg" class="rounded-circle img-fluid" alt="profile picture">
+                </div>
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-6">
                     <p>Hey there! I'm Alex, a software engineer based in San Francisco, CA.<br><br>
-                    I love building things and have several completed projects which you can view below.</p>
+                    I love building things and have several completed projects which you can view below. During my time learning, I've worked with a variety of languages...</p>
                 </div>
             </div>
         </div>
