Fix about section, change colors

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item active ml-auto">
-                        <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Experience</a>
+                        <a class="nav-link" href="#experience">Experience</a>
                     </li>
                     <li class="nav-item active ml-auto">
                         <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Projects</a>
@@ -72,7 +72,50 @@
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-6">
                     <p>Hey there! I'm Alex, a software engineer based in San Francisco, CA.<br><br>
-                    I love building things and have several completed projects which you can view below. During my time learning, I've worked with a variety of languages...</p>
+                    I love building things and have several completed projects, ranging from games to websites with databases, which you can view below. My goal is to produce highly polished software and thus prefer to 
+                    dedicate my time on things I am truly passionate about.<br><br>
+                    I am currently working on my Bachelor's in Computer Science at <a href="https://oregonstate.edu/" target="_blank">Oregon State University</a>. Some of the technologies I've recently used in my
+                    schoolwork and assignments include:<br><br>
+                    <div class="row">
+                        <div class="col col-3 skillsList">
+                            <ul>
+                                <li>Python</li>
+                                <li>Javascript</li>
+                                <li>HTML</li>
+                            </ul>
+                        </div>
+                        <div class="col col-3 skillsList">
+                            <ul>
+                                <li>CSS</li>
+                                <li>Node.js</li>
+                                <li>mySQL</li>
+                            </ul></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="experience" class="container">
+            <div class="row">
+                <div class="col">
+                    <h2>Experience</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <p>TBD</p>
+                </div>
+            </div>
+        </div>
+        <div id="projects" class="container">
+            <div class="row">
+                <div class="col">
+                    <h2>Projects</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    
                 </div>
             </div>
         </div>
