--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                         <a class="nav-link" href="#experience">Experience</a>
                     </li>
                     <li class="nav-item active ml-auto">
-                        <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Projects</a>
+                        <a class="nav-link" href="#work">Work</a>
                     </li>
                     <li class="nav-item active ml-auto">
-                        <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                     <li class="nav-item active ml-auto">
                         <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Resume</a>
@@ -63,7 +63,7 @@
         <div id="about" class="container">
             <div class="row">
                 <div class="col">
-                    <h2>About</h2>
+                    <h2>About Me</h2>
                 </div>
             </div>
             <div class="row">
@@ -72,19 +72,19 @@
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-6">
                     <p>Hey there! I'm Alex, a software engineer based in San Francisco, CA.<br><br>
-                    I love building things and have several completed projects, ranging from games to websites with databases, which you can view below. My goal is to produce highly polished software and thus prefer to 
-                    dedicate my time on things I am truly passionate about.<br><br>
-                    I am currently working on my Bachelor's in Computer Science at <a href="https://oregonstate.edu/" target="_blank">Oregon State University</a>. Some of the technologies I've recently used in my
-                    schoolwork and assignments include:<br><br>
+                    I love building things and have several projects, completed and in-progress, which you can view below. Regardless of what I'm working on, I strive to always produce software that is
+                    intuitive to use and cleanly written. When I'm not programming, I'm an avid tennis player, restaurant-goer and budget-traveler.<br><br>
+                    I'm currently working on my Bachelor's in Computer Science at <a href="https://oregonstate.edu/" target="_blank">Oregon State University</a>. Some of the technologies I've recently used in my
+                    projects include:<br><br>
                     <div class="row">
-                        <div class="col col-3 skillsList">
+                        <div class="col col-6 skillsList">
                             <ul>
                                 <li>Python</li>
                                 <li>Javascript</li>
                                 <li>HTML</li>
                             </ul>
                         </div>
-                        <div class="col col-3 skillsList">
+                        <div class="col col-6 skillsList">
                             <ul>
                                 <li>CSS</li>
                                 <li>Node.js</li>
@@ -98,7 +98,7 @@
         <div id="experience" class="container">
             <div class="row">
                 <div class="col">
-                    <h2>Experience</h2>
+                    <h2>Where I've Worked</h2>
                 </div>
             </div>
             <div class="row">
@@ -107,15 +107,38 @@
                 </div>
             </div>
         </div>
-        <div id="projects" class="container">
+        <div id="work" class="container">
             <div class="row">
                 <div class="col">
-                    <h2>Projects</h2>
+                    <h2>My Projects</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    
+                    <p>TBD</p>
+                </div>
+            </div>
+        </div>
+        <div id="contact" class="container">
+            <div class="row">
+                <div class="col">
+                    <h2>Let's Get In Touch</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <p>My inbox is always open, feel free to shoot me an email at <a href="mailto:alalex616@gmail.com">alalex616@gmail.com</a> or send me a message below.</p>
+                    <form action="mailto:alalex616@gmail.com" method="GET">
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="name" placeholder="Name" required>
+                            <br>
+                            <input type="email" class="form-control" name="email" placeholder="Email" required>
+                            <br>
+                            <textarea class="form-control" rows="5" name="message" placeholder="Message" required></textarea>
+                            <br>
+                            <button type="submit" class="btn">Send</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
